Fix build warning in WebKit2/WebProcess and UIProcess module. https://bugs.webkit.org/show_bug.cgi?id=141794.

Reviewed by Anders Carlsson.

Fix build warning by using UNUSED_PARAM macro.

* UIProcess/WebsiteData/WebsiteDataStore.cpp:
(WebKit::computeWebProcessAccessType):
* WebProcess/WebProcess.cpp:
(WebKit::WebProcess::deleteWebsiteData):


Canonical link: https://commits.webkit.org/159847@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@180386 268f45cc-cd09-0410-ab3c-d52691b4dbfc